<resources>
    <string name="app_name">MoneyCalc</string>
    <string name="app_version">v1.1.2</string>
    <string name="app_date">02.10.2019</string>
    <string name="backend_version">v1.1.x</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <!-- Menu titles -->
    <string name="menu_settings">Настройки</string>
    <string name="menu_about">О приложении</string>
    <string name="menu_refresh">Обновить</string>
    <string name="menu_logout">Выйти</string>
    <string name="menu_finance">Финансы</string>
    <string name="menu_stats">Статистика</string>
    <string name="menu_history">История</string>
    <string name="menu_history_filter">Фильтровать</string>
    <string name="menu_main">Главная</string>
    <string name="menu_control">Управление</string>
    <string name="menu_spending_sections">Статьи расхода</string>

    <!-- Activity titles -->
    <string name="title_activity_login">Войти</string>
    <string name="title_activity_register">Зарегистрироваться</string>
    <string name="title_activity_home">Главная</string>

    <!-- Register Activity -->
    <string name="register_prompt_login">Логин</string>
    <string name="register_prompt_email">Email</string>
    <string name="register_prompt_password">Пароль</string>
    <string name="register_prompt_name">Имя</string>

    <!-- Login Activity -->
    <string name="login_prompt_login">Логин</string>
    <string name="login_prompt_password">Пароль</string>
    <string name="action_sign_in">Авторизоваться</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_login">Некорректный логин</string>
    <string name="error_invalid_password">Некорректный пароль</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Обязательное поле</string>
    <string name="login_register_here">Зарегистрироваться</string>

    <!-- Home Activity -->
    <string name="home_dates_range_desc">Диапазон:</string>
    <string name="home_today_balance">Баланс сегодня:</string>
    <string name="home_summary_balance">Баланс за период:</string>
    <string name="home_spend_balance">Потрачено за период:</string>
    <string name="home_left_balance">Осталось:</string>

    <!-- SpendingSection Activity -->
    <string name="ss_turnOff_ss">Отключить</string>
    <string name="ss_turnOn_ss">Активировать</string>
    <string name="ss_update_ss">Редактировать</string>
    <string name="ss_delete_ss">Удалить</string>

    <!-- AddEditTransaction Activity -->
    <string name="transaction_sum">Сумма</string>
    <string name="transaction_title">Заголовок</string>
    <string name="transaction_desc">Описание</string>
    <string name="transaction_section">Категория</string>
    <string name="transaction_date">Дата</string>
    <string name="transaction_add">Добавить операцию</string>
    <string name="transaction_added">Успешно сохранено</string>
    <string name="transaction_edit">Редактировать операцию</string>
    <string name="transaction_edited">Успешно отредактировано</string>
    <string name="transaction_cancel">Отменить</string>
    <string name="transaction_delete_part1">Удалить операцию в </string>
    <string name="transaction_delete_part3">рублей</string>
    <string name="transaction_delete_part4">и описанием </string>

    <!-- AddEditSpendingSection Activity -->
    <string name="spending_section_name">Имя</string>
    <string name="spending_section_budget">Бюджет</string>
    <string name="spending_section_title">Удалить статью расхода</string>
    <string name="spending_section_add">Добавить статью расхода</string>
    <string name="spending_section_added">Статья расхода успешно добавлена</string>
    <string name="spending_section_delete">Удалить статью расхода</string>
    <string name="spending_section_delete_success">Статья расхода успешно удалена</string>
    <string name="spending_section_edit">Редактировать статью расхода</string>
    <string name="spending_section_edit_success">Статья расхода успешно отредактирована</string>

    <!-- History Activity -->
    <string name="transaction_delete_title">Удалить операцию</string>
    <string name="transaction_delete_success">Операция успешно удалена</string>
    <string name="transaction_no_items">Ничего нет</string>
    <string name="transaction_filter">Фильтр</string>
    <string name="transaction_filter_active">Применен фильтр</string>
    <string name="transaction_filter_cancel">Снять</string>
    <string name="transaction_filter_title">Фильтр по заголовку</string>
    <string name="transaction_filter_desc">Фильтр по описанию</string>
    <string name="transaction_filter_sections_check_all">Выделить всё</string>
    <string name="transaction_filter_sections_uncheck_all">Снять всё</string>

    <!-- Settings Activity -->
    <string name="preferences_period">Период расчета</string>
    <string name="preferences_period_from">Начало периода</string>
    <string name="preferences_period_to">Конец периода</string>
    <string name="settings_update_success">Настройки успешно обновлены</string>

    <!-- Statistics Activity -->
    <string name="stats_by_section_sum">Σ по статьям</string>
    <string name="stats_by_date_sum">Σ по дням</string>
    <string name="stats_by_date_section_sum">Σ по дням и статьям</string>
    <string name="stats_name">Имя</string>
    <string name="stats_sum">Сумма</string>
    <string name="stats_date">Дата</string>


    <!-- Application Settings Activity -->
    <string name="appl_settings_server_address">Адрес сервера</string>
    <string name="appl_settings_server_ip">IP адрес сервера</string>
    <string name="appl_settings_server_port">Порт сервера</string>

    <!-- Dialogs -->
    <string name="cancel">Отмена</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="saving_success">Успешно сохранено</string>
    <string name="are_you_sure">Вы уверены?</string>

</resources>
