<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/history_frag">

        <RelativeLayout
            android:id="@+id/history_filter_window"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/indigo300"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/transaction_filter_active"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/history_filter_window_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/transaction_filter_cancel"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>


        <ProgressBar
            android:id="@+id/history_progress"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:scaleX="0.25"
            android:scaleY="0.25" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@+id/history_filter_window" />

    </android.support.constraint.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ru.strcss.projects.moneycalc.moneycalcandroid.componets.history.HistoryFab
            android:id="@+id/fab_history_addtransaction"
            style="@style/Widget.MaterialSheetFab.Fab"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />

        <!-- Overlay that dims the screen -->
        <com.gordonwong.materialsheetfab.DimOverlayFrameLayout
            android:id="@+id/history_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- Circular reveal container for the sheet -->
        <io.codetail.widget.RevealLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|bottom"
            android:orientation="vertical">

            <!-- Sheet that contains your items -->
            <android.support.v7.widget.CardView
                android:id="@+id/history_fab_sheet"
                style="@style/Widget.MaterialSheetFab.Sheet">

                <!-- Sheet items -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Photo -->
                    <TextView
                        android:id="@+id/history_fab_sheet_item_filter"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:drawableStart="@drawable/ic_search_black_24dp"
                        android:text="@string/transaction_filter" />

                    <!-- Note -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/theme_accent" />

                    <TextView
                        android:id="@+id/history_fab_sheet_item_add_transaction"
                        style="@style/TextAppearance.MaterialSheetFab.Sheet.Item"
                        android:drawableStart="@drawable/ic_attach_money_black_24dp"
                        android:background="@color/theme_accent"
                        android:text="@string/transaction_add" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </io.codetail.widget.RevealLinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>